# CONCORD

./: .gitignore  Dockerfile.backend  README.md  SUBMISSION.md  docker-compose.yml  test_port.py  verify_full_system.py  verify_kafka.py
.github/workflows/: docker-publish.yml  polyglot-ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  verify_agents.py  verify_api_integration.py  verify_butterfly.py  verify_holodeck.py  verify_quantum.py  verify_repair.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  bdi_engine.py  memory.py  planner.py
backend/app/api/: __init__.py
backend/app/causality/: __init__.py  propagator.py  repair_agent.py
backend/app/core/: __init__.py  constraint_engine.py  entity_tracker.py  event_bus.py  explainer.py  knowledge_graph.py  temporal_reasoner.py
backend/pipeline/: reasoning_pipeline.py
backend/tests/: test_consistency.py
backend/training/: __init__.py
c_vector/: README.md  libvector.dylib  test_vec  test_vector.c  vector_store.c  vector_store.h
cpp_sim/: PhysicsEngine.cpp  PhysicsEngine.hpp  README.md  libphys.dylib  test_phys  test_physics.cpp
data/: final_98_predictions.csv  llama_1b_predictions.csv  pipeline_predictions.csv  submission.csv  submission_detailed.csv
docs/: REVERSE_ENGINEERING.md
infra/: README.md
infra/terraform/: main.tf
java_services/: Dockerfile  README.md  pom.xml
r_analytics/: Dockerfile  README.md  analytics.R  forecast.R  heatmap.R  suite.R
rust_core/: Cargo.toml  Dockerfile  README.md
rust_core/src/: consumer.rs  lib.rs
(+36 files in other folders)
